--- a/Ultimate_Endless_Piano.ipynb
+++ b/Ultimate_Endless_Piano.ipynb
@@ -471,7 +471,7 @@
         "max_overfit_ratio = 0.5 # @param {type:\"slider\", min:0.1, max:0.9, step:0.1}\n",
         "chords_memory_length = 16 # @param {type:\"slider\", min:-1, max:64, step:1}\n",
         "render_MIDI_to_audio = True # @param {type:\"boolean\"}\n",
-        "verbose = True # @param {type:\"boolean\"}\n",
+        "verbose = False # @param {type:\"boolean\"}\n",
         "\n",
         "#===============================================================================\n",
         "\n",
@@ -537,10 +537,18 @@
         "        counter += 1\n",
         "\n",
         "      else:\n",
-        "        break\n",
+        "        if verbose:\n",
+        "          print('Failed to find good match!!!')\n",
+        "          print('Retrying...')\n",
+        "          print('=' * 70)\n",
+        "          break\n",
         "\n",
         "    else:\n",
-        "      break\n",
+        "      if verbose:\n",
+        "        print('Failed to find good match!!!')\n",
+        "        print('Retrying...')\n",
+        "        print('=' * 70)\n",
+        "        break\n",
         "\n",
         "  if counter == num_chords:\n",
         "    if verbose:\n",
@@ -549,36 +557,33 @@
         "      print('=' * 70)\n",
         "\n",
         "    match_ratios = [0]\n",
-        "\n",
-        "    tqdmdis = False\n",
-        "\n",
-        "    if not verbose:\n",
-        "      tqdmdis = True\n",
+        "    tqdmdis = not verbose\n",
+        "    nchords = cp.array(new_chords)\n",
         "\n",
         "    for c in notebook.tqdm_notebook(melody_chords_f, disable=tqdmdis):\n",
+        "      comp = cp.array(c[0])\n",
+        "      len_range = min(len(nchords)-1, len(comp)-1)\n",
         "\n",
-        "      comp = c[0]\n",
+        "      # Create a sliding window view of 'comp' with a window length of 'len_range'\n",
+        "      shape = (comp.size - len_range + 1, len_range)\n",
+        "      strides = (comp.strides[0], comp.strides[0])\n",
+        "      windows = cp.lib.stride_tricks.as_strided(comp, shape=shape, strides=strides)\n",
         "\n",
-        "      for i in range(len(comp)-min(len(new_chords)-1, len(comp)-1)):\n",
+        "      # Compute match ratios for all windows at once\n",
+        "      match_ratios_chunk = cp.sum(windows == nchords[:len_range], axis=1) / len_range\n",
         "\n",
-        "        chunk = comp[i:i+min(len(new_chords)-1, len(comp)-1)]\n",
+        "      match_ratios.extend(match_ratios_chunk.tolist())\n",
         "\n",
-        "        match_ratio = sum([1 if a == b else 0 for a, b in zip(new_chords[:len(chunk)], chunk[:len(new_chords)])]) / min(len(new_chords)-1, len(comp)-1)\n",
-        "        match_ratios.append(match_ratio)\n",
-        "\n",
-        "        if match_ratio == 1.0:\n",
-        "          break\n",
-        "\n",
-        "      if max(match_ratios) == 1.0:\n",
+        "      if cp.max(match_ratios_chunk) == 1.0:\n",
         "        if verbose:\n",
         "          print('Complete overfit!!!')\n",
         "          print('Starting new search...')\n",
         "          print('=' * 70)\n",
         "        break\n",
         "\n",
-        "      elif max_overfit_ratio < max(match_ratios) < 1.0:\n",
+        "      elif max_overfit_ratio < cp.max(match_ratios_chunk) < 1.0:\n",
         "        if verbose:\n",
-        "          print('High overfit:', max(match_ratios))\n",
+        "          print('High overfit:', cp.max(match_ratios_chunk))\n",
         "          print('Starting new search...')\n",
         "          print('=' * 70)\n",
         "        break\n",
@@ -590,62 +595,74 @@
         "        print('=' * 70)\n",
         "      break\n",
         "\n",
+        "  else:\n",
+        "    if verbose:\n",
+        "      print('Failed to find good match!!!')\n",
+        "      print('Retrying...')\n",
+        "      print('=' * 70)\n",
         "#===============================================================================\n",
         "\n",
-        "print('Done!')\n",
         "print('=' * 70)\n",
         "\n",
         "#===============================================================================\n",
         "\n",
-        "out1 = new_pitches\n",
+        "if max(match_ratios) < max_overfit_ratio:\n",
         "\n",
-        "print('Sample INTs', out1[:12])\n",
-        "print('=' * 70)\n",
+        "  if not verbose:\n",
+        "    print('Found good match!')\n",
+        "    print('Overfit ratio:', max(match_ratios))\n",
         "\n",
-        "if len(out1) != 0:\n",
+        "  out1 = new_pitches\n",
         "\n",
-        "    song = out1\n",
-        "    song_f = []\n",
+        "  if verbose:\n",
+        "    print('Sample INTs', out1[:12])\n",
+        "    print('=' * 70)\n",
         "\n",
-        "    time = 0\n",
-        "    dur = 0\n",
-        "    vel = 90\n",
-        "    pitch = 0\n",
-        "    channel = 0\n",
+        "  if len(out1) != 0:\n",
         "\n",
-        "    patches = [0] * 16\n",
+        "      song = out1\n",
+        "      song_f = []\n",
         "\n",
-        "    for i, s in enumerate(song):\n",
+        "      time = 0\n",
+        "      dur = 0\n",
+        "      vel = 90\n",
+        "      pitch = 0\n",
+        "      channel = 0\n",
         "\n",
-        "        time += s[0] * 32\n",
+        "      patches = [0] * 16\n",
         "\n",
-        "        for d in s[1:]:\n",
+        "      for i, s in enumerate(song):\n",
         "\n",
-        "          dur = d[0] * 32\n",
-        "          ptc = d[1]\n",
-        "          vel = d[2]\n",
+        "          time += s[0] * 32\n",
         "\n",
-        "          song_f.append(['note', time, dur, channel, ptc, vel, 0])\n",
+        "          for d in s[1:]:\n",
+        "\n",
+        "            dur = d[0] * 32\n",
+        "            ptc = d[1]\n",
+        "            vel = d[2]\n",
+        "\n",
+        "            song_f.append(['note', time, dur, channel, ptc, vel, 0])\n",
         "\n",
         "\n",
-        "detailed_stats = TMIDIX.Tegridy_ms_SONG_to_MIDI_Converter(song_f,\n",
-        "                                                        output_signature = 'Ultimate Endless Piano',\n",
-        "                                                        output_file_name = '/content/Ultimate-Endless-Piano-Composition',\n",
-        "                                                        track_name='Project Los Angeles',\n",
-        "                                                        list_of_MIDI_patches=patches\n",
-        "                                                        )\n",
+        "  detailed_stats = TMIDIX.Tegridy_ms_SONG_to_MIDI_Converter(song_f,\n",
+        "                                                          output_signature = 'Ultimate Endless Piano',\n",
+        "                                                          output_file_name = '/content/Ultimate-Endless-Piano-Composition',\n",
+        "                                                          track_name='Project Los Angeles',\n",
+        "                                                          list_of_MIDI_patches=patches,\n",
+        "                                                          verbose=verbose\n",
+        "                                                          )\n",
         "\n",
-        "print('=' * 70)\n",
-        "print('Displaying resulting composition...')\n",
-        "print('=' * 70)\n",
+        "  print('=' * 70)\n",
+        "  print('Displaying resulting composition...')\n",
+        "  print('=' * 70)\n",
         "\n",
-        "fname = '/content/Ultimate-Endless-Piano-Composition'\n",
+        "  fname = '/content/Ultimate-Endless-Piano-Composition'\n",
         "\n",
-        "if render_MIDI_to_audio:\n",
-        "  midi_audio = midi_to_colab_audio(fname + '.mid')\n",
-        "  display(Audio(midi_audio, rate=16000, normalize=False))\n",
+        "  if render_MIDI_to_audio:\n",
+        "    midi_audio = midi_to_colab_audio(fname + '.mid')\n",
+        "    display(Audio(midi_audio, rate=16000, normalize=False))\n",
         "\n",
-        "TMIDIX.plot_ms_SONG(song_f, plot_title=fname)"
+        "  TMIDIX.plot_ms_SONG(song_f, plot_title=fname)"
       ],
       "metadata": {
         "cellView": "form",
