--- a/Ultimate_Endless_Piano.ipynb
+++ b/Ultimate_Endless_Piano.ipynb
@@ -506,6 +506,7 @@
         "  previous_idxs.append(src_idx)\n",
         "\n",
         "  counter = 0\n",
+        "  match_ratios = [0]\n",
         "\n",
         "  for i in range(num_chords):\n",
         "\n",
@@ -541,14 +542,14 @@
         "          print('Failed to find good match!!!')\n",
         "          print('Retrying...')\n",
         "          print('=' * 70)\n",
-        "          break\n",
+        "        break\n",
         "\n",
         "    else:\n",
         "      if verbose:\n",
         "        print('Failed to find good match!!!')\n",
         "        print('Retrying...')\n",
         "        print('=' * 70)\n",
-        "        break\n",
+        "      break\n",
         "\n",
         "  if counter == num_chords:\n",
         "    if verbose:\n",
@@ -662,7 +663,11 @@
         "    midi_audio = midi_to_colab_audio(fname + '.mid')\n",
         "    display(Audio(midi_audio, rate=16000, normalize=False))\n",
         "\n",
-        "  TMIDIX.plot_ms_SONG(song_f, plot_title=fname)"
+        "  TMIDIX.plot_ms_SONG(song_f, plot_title=fname)\n",
+        "\n",
+        "else:\n",
+        "  print('Nothing to display!')\n",
+        "  print('Please try again...')"
       ],
       "metadata": {
         "cellView": "form",
