--- a/Ultimate_Endless_Piano.ipynb
+++ b/Ultimate_Endless_Piano.ipynb
@@ -506,7 +506,7 @@
         "  previous_idxs.append(src_idx)\n",
         "\n",
         "  counter = 0\n",
-        "  match_ratios = [0]\n",
+        "  match_ratios = [1]\n",
         "\n",
         "  for i in range(num_chords):\n",
         "\n",
@@ -557,7 +557,7 @@
         "      print('Checking...')\n",
         "      print('=' * 70)\n",
         "\n",
-        "    match_ratios = [0]\n",
+        "    match_ratios = [1]\n",
         "    tqdmdis = not verbose\n",
         "    nchords = cp.array(new_chords)\n",
         "\n",
@@ -667,7 +667,8 @@
         "\n",
         "else:\n",
         "  print('Nothing to display!')\n",
-        "  print('Please try again...')"
+        "  print('Please try again...')\n",
+        "  print('=' * 70)"
       ],
       "metadata": {
         "cellView": "form",
