--- a/Ultimate_Endless_Piano.ipynb
+++ b/Ultimate_Endless_Piano.ipynb
@@ -506,7 +506,7 @@
         "  previous_idxs.append(src_idx)\n",
         "\n",
         "  counter = 0\n",
-        "  match_ratios = [1]\n",
+        "  match_ratios = [0]\n",
         "\n",
         "  for i in range(num_chords):\n",
         "\n",
@@ -557,7 +557,7 @@
         "      print('Checking...')\n",
         "      print('=' * 70)\n",
         "\n",
-        "    match_ratios = [1]\n",
+        "    match_ratios = [0]\n",
         "    tqdmdis = not verbose\n",
         "    nchords = cp.array(new_chords)\n",
         "\n",
@@ -589,7 +589,7 @@
         "          print('=' * 70)\n",
         "        break\n",
         "\n",
-        "    if max(match_ratios) < max_overfit_ratio:\n",
+        "    if 0 < max(match_ratios) <= max_overfit_ratio:\n",
         "      if verbose:\n",
         "        print('Found good match!')\n",
         "        print('Overfit ratio:', max(match_ratios))\n",
@@ -607,7 +607,7 @@
         "\n",
         "#===============================================================================\n",
         "\n",
-        "if max(match_ratios) < max_overfit_ratio:\n",
+        "if 0 < max(match_ratios) < max_overfit_ratio:\n",
         "\n",
         "  if not verbose:\n",
         "    print('Found good match!')\n",
